# Camera

./: LICENSE  README.md  deno.jsonc  example.ts
.github/workflows/: manual-release.yml  publish-jsr.yml  release.yml
examples/: camera.ts  ffi.ts  openpnp.ts  text-recognition.ts
src/: camera.ts  ffi.ts  mod.ts  openpnp.ts  types.ts
src-rust/: Cargo.toml
src-rust/src/: lib.rs  utils.rs
tests/: mod.test.ts
